Closed Bug 1617142 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::net::Http3Session::IsReused]

Categories

(Core :: Networking: HTTP, defect, P1)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox-esr68 --- unaffected
firefox73 --- disabled
firefox74 --- disabled
firefox75 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

(Blocks 1 open bug)

Details

(Keywords: crash, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

This bug is for crash report bp-49ef810b-d607-422f-87a8-0803b0200221.

Top 10 frames of crashing thread:

0 libxul.so non-virtual thunk to mozilla::net::Http3Session::IsReused netwerk/protocol/http/Http3Session.cpp
1 libxul.so mozilla::net::nsHttpTransaction::Close netwerk/protocol/http/nsHttpTransaction.cpp:1112
2 libxul.so mozilla::net::Http3Session::CloseStream netwerk/protocol/http/Http3Session.cpp:953
3 libxul.so mozilla::net::Http3Session::CloseTransaction netwerk/protocol/http/Http3Session.cpp:942
4 libxul.so mozilla::net::nsHttpConnectionMgr::OnMsgCancelTransaction netwerk/protocol/http/nsHttpConnectionMgr.cpp:2487
5 libxul.so mozilla::net::ConnEvent::Run netwerk/protocol/http/nsHttpConnectionMgr.cpp:258
6 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1220
7 libxul.so <name omitted> xpcom/threads/nsThreadUtils.cpp:481
8 libxul.so mozilla::net::nsSocketTransportService::Run netwerk/base/nsSocketTransportService2.cpp:1135
9 libxul.so non-virtual thunk to mozilla::net::nsSocketTransportService::Run netwerk/base/nsSocketTransportService2.cpp

Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Attachment #9129729 - Attachment description: Bug 161742 - Always check that mConnection is not nullptr. r=mayhemer → Bug 161742 - Always check that mConnection is not nullptr. r=michal
Attachment #9129729 - Attachment description: Bug 161742 - Always check that mConnection is not nullptr. r=michal → Bug 1617142 - Always check that mConnection is not nullptr. r=michal
Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/14dcad18a951 Always check that mConnection is not nullptr. r=mayhemer
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Crash Signature: [@ mozilla::net::Http3Session::IsReused] → [@ mozilla::net::Http3Session::IsReused] [@ mozilla::image::RecyclingSourceSurface::Unmap]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: