Bug 1617142 - Always check that mConnection is not nullptr. r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D64732